# libbgcode

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  py-build-cmake.local.toml  pyproject.dynlink.toml  pyproject.toml  setup.py
.github/workflows/: build.yml  test.yml
cmake/: Config.cmake.in  ProjectVersion.cmake  version.rc.in
cmake/modules/: AddCMakeProject.cmake
doc/: bgcode.md  building.md  specifications.md
example/: bginfo.py  main.cpp
include/: libbgcode.hpp
pybgcode/: .pylintrc  CMakeLists.txt  CMakePresets.json  pybgcode.cpp  ruff.toml
pybgcode/pybgcode/: __init__.py
pybgcode/tests/: test_convert.py
src/LibBGCode/binarize/: CMakeLists.txt  binarize.cpp  binarize.hpp  meatpack.cpp
src/LibBGCode/cmd/: CMakeLists.txt  main.cpp
src/LibBGCode/convert/: CMakeLists.txt  convert.cpp
src/LibBGCode/core/: CMakeLists.txt  core.cpp  core.hpp  core_impl.hpp
src/LibBGCode/python/: CMakeLists.txt  pybgcode.cpp
src/LibBGCode/wasm/: CMakeLists.txt  bgcode_fio.cpp  bgcode_wa.cpp  index.html  index_fio.html
src/base/: base.cpp  base.hpp  meatpack.cpp  meatpack.hpp
src/bgcode/: main.cpp
src/binarize/: binarize.cpp  binarize.hpp  meatpack.hpp
src/convert/: convert.cpp  convert.hpp
src/core/: core.cpp  core.hpp
src/python-bgcode/: ChangeLog  core.cc  setup.py
src/python-bgcode/bgcode/: __init__.py
tests/: CMakeLists.txt
tests/base/: CMakeLists.txt  base_tests.cpp
tests/binarize/: binarize_tests.cpp
tests/convert/: CMakeLists.txt  convert_tests.cpp
tests/core/: core_tests.cpp
tests/data/: mini_cube_ascii.gcode  mini_cube_binary.gcode  mini_cube_binary_ascii.gcode  mini_cube_ps2.8.1.bgcode  mini_cube_ps2.8.1.gcode  mini_cube_ps2.8.1_ref.gcode  thumb3d.glb
tests/pybgcode/: CMakeLists.txt  test_convert.py
