[build-system]
requires = ["py-build-cmake~=0.1.8"]
build-backend = "py_build_cmake.build"

[project]
name = "pybgcode"
version = "0.1"
description = "Prusa Block & Binary G-code reader / writer / converter"
authors = [
  { name = "Enrico Turri" }, { name = "Tomas Meszaros" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "LICENSE :: OSI APPROVED :: GNU AFFERO GENERAL PUBLIC LICENSE V3 OR LATER (AGPLV3+)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/prusa3d/libbgcode"
"Bug Tracker" = "https://github.com/prusa3d/libbgcode/issues"

[tool.py-build-cmake.module] # Where to find the Python module to package
directory = "src/LibBGCode/python/"

[tool.py-build-cmake.sdist] # What to include in source distributions
include = [ "src/*" , "deps/*", "cmake/*", "tests/*", "CMakeLists.txt", "CMakePresets.json"]
exclude = [".gitignore", ".git/", ".github/", "deps/build*", "build*", "CMakeLists.txt.user", "*.bak"]

[tool.py-build-cmake.cmake] # How to build the CMake project
build_type = "RelWithDebInfo"
source_path = "."
# build_args = ["-j"]
options = { "CMAKE_FIND_ROOT_PATH" = "/home/quarky/Workspace/prusa3d/LibBGCode/libbgcode-src-master/deps/build-python/destdir/usr/local", "LibBGCode_BUILD_PYTHON_BINDING" = "on" }
# preset = "python-module"
# build_presets = ["python-module"]
# build_path = "build"

# [tool.py-build-cmake.linux.cmake]
# build_path = "build"
